@@ -4,6 +4,8 @@ Summary of changes between libmikmod 3.3.7 and libmikmod 3.3.8:
 libmikmod v3.3.8 was released on XX-XXX-XXXX.
 
 - Support for OpenBSD sndio.
+- Handle the FastTracker2 pattern loop (E60) bug. Modules abusing this
+  bug (roadblas.xm) should play correctly now. Thanks to Eugene Toder.
 - Fixed a possible undefined behavior in the XM loader.
 - Updated configury. The aix, hpux, bsd/sunaudio and sgi audio drivers
   are now configurable and not built unconditionally.
